; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_strbuf.c_strbuf_release.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_strbuf.c_strbuf_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strbuf_release(%struct.strbuf* %0) #0 {
  %2 = alloca %struct.strbuf*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %2, align 8
  %3 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %4 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %9 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %8, i32 0, i32 0
  %10 = call i32 @zfree(i32* %9)
  %11 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %12 = call i32 @strbuf_init(%struct.strbuf* %11, i32 0)
  br label %13

13:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @zfree(i32*) #1

declare dso_local i32 @strbuf_init(%struct.strbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
